# youtube-diarization

./: .gitignore  README.MD  pyproject.toml  requirements.txt
diarization/: celery_task.py  diarization.py  streamlit_app.py  transcription.py  youtube_downloader.py
diarization/src/: create_protocol.py  transcription.py  youtube_downloader.py
