[project]
name = "diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    "openai-whisper",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
    "pytubefix>=8.10.0",
    "redis>=5.2.1",
    "streamlit>=1.41.1",
    "torch>=2.5.1",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "90db0de1896c23cbfaf0c58bc2d30665f709f170" }
